# stronk

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  HACKING.md  LICENSE  README.md  cmake-format.yaml  sonar-project.properties  vcpkg.json
.github/actions/install-clang/: action.yml
.github/actions/install-gcc/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  update_readme.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: benchmark_helpers.h  benchmark_helpers.hpp  construction_benchmarks.cpp  construction_benchmarks.hpp  main.cpp  unit_benchmarks.cpp  unit_benchmarks.hpp
cmake/: code-coverage.cmake  dev-mode.cmake  docs-ci.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  spell.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
examples/: .clang-tidy  CMakeLists.txt  firstname_lastname_example.cpp  specializers_example.cpp  specializing_example.cpp  unit_energy_example.cpp  unit_example.cpp
include/stronk/: can_abs.hpp  can_be_used_as_flag.hpp  can_decrement.h  can_format.h  can_format.hpp  can_hash.h  can_hash.hpp  can_increment.h  can_isnan.hpp  can_multiply.hpp  can_pow.h  can_sqrt.h  can_stream.h  can_stream.hpp  cmath.hpp  prefabs.h  prefabs.hpp  specializers.h  stronk.h  stronk.hpp  test_unit_v2.h  unit.h  unit.hpp  unit_v2.h
include/stronk/extensions/: absl.h  absl.hpp  doctest.h  doctest.hpp  fmt.h  fmt.hpp  glaze.h  glaze.hpp  gtest.h  gtest.hpp  nlohmann_json.h  nlohmann_json.hpp
include/stronk/prefabs/: stronk_arithmetic.hpp  stronk_flag.hpp  stronk_string.hpp  stronk_vector.hpp
include/stronk/skills/: can_abs.hpp  can_be_used_as_flag.hpp  can_decrement.hpp  can_divide.hpp  can_format.hpp  can_hash.hpp  can_increment.hpp  can_index.hpp  can_isnan.hpp  can_iterate.hpp  can_view.hpp
include/stronk/utilities/: constexpr_helpers.h  constexpr_helpers.hpp  dimension_type_list.h  dimensions.h  dimensions.hpp  equality.h  equality.hpp  macros.h  macros.hpp  ratio.hpp  strings.h  strings.hpp  type_list.h
install/include/stronk/stronk/: prefabs.h  specializers.h  stronk.h  unit.h
install/include/stronk/stronk/extensions/: absl.h  fmt.h
install/include/stronk/stronk/utilities/: constexpr_helpers.h  equality.h
install/share/stronk/: stronkConfig.cmake  stronkTargets.cmake
issue/: unit_tests-4e04ce.sh  unit_tests-58733d.cpp  unit_tests-58733d.sh  unit_tests-b80a96.sh
test/: CMakeLists.txt
test/src/: extensions_tests.cpp  stronk_tests.cpp  unit_tests.cpp
test/src/utilities/: type_list_tests.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/: can_decrement_tests.cpp  can_format_tests.cpp  can_hash_tests.cpp  can_increment_tests.cpp  can_pow_tests.cpp  can_sqrt_tests.cpp  can_stream_tests.cpp  cmath_tests.cpp  extensions_tests.cpp  specializers_tests.cpp  stronk_tests.cpp  unit_tests.cpp  unit_v2_tests.cpp
tests/src/extensions/: absl_tests.cpp  doctest_tests.cpp  fmt_tests.cpp  glaze_tests.cpp  gtest_tests.cpp  nlohmann_json_tests.cpp
tests/src/prefabs/: stronk_arithmetic_tests.cpp  stronk_flag_tests.cpp  stronk_string_tests.cpp  stronk_vector_tests.cpp
tests/src/skills/: can_abs_tests.cpp  can_decrement_tests.cpp  can_divide_tests.cpp  can_format_tests.cpp  can_hash_tests.cpp  can_increment_tests.cpp  can_index_tests.cpp  can_isnan_tests.cpp  can_iterate_tests.cpp  can_multiply_tests.cpp  can_stream_tests.cpp
tests/src/utilities/: dimension_type_list_tests.cpp  dimensions_tests.cpp  ratio_tests.cpp  type_list_tests.cpp
tools/: check_all_files_are_used.py  check_include_what_you_use.sh  check_install_packages_match.py  embed_code.py  run_clangd_tidy_on_changed.sh  update_readme.py
triplets/: sanitize-x64-linux.cmake  sanitize-x64-windows.cmake
